# 818b-m2

./: README.md  my.cfg
audiodriver/: CMakeLists.txt  CMakeLists.txt.example.in  Makefile.example  Makefile.libtool  README  SConstruct
playercontroller/: Makefile  audioshared.h  map.inc  old.our.cc  opaquedriver.cc  our  our-na  our-na.c  our.c  our.cfg  our.inc  our.world
stagecontroller/: my.cc  my.world
