INCLUDE_DIRECTORIES (${PLAYERCORE_EXTRA_INCLUDE_DIRS})
LINK_DIRECTORIES (${PLAYERCORE_EXTRA_LINK_DIRS})
ADD_LIBRARY (audiodriver SHARED audiodriver.cc)
TARGET_LINK_LIBRARIES (audiodriver playercore)

SET (exampleCMakeLists_in ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt.example.in)
SET (exampleCMakeLists ${CMAKE_CURRENT_BINARY_DIR}/CMakeLists.txt.example)
SET (exampleDestDir share/${PROJECT_NAME_LOWER}/examples/plugins/audiodriver)
CONFIGURE_FILE (${exampleCMakeLists_in} ${exampleCMakeLists} @ONLY)
INSTALL (FILES ${exampleCMakeLists} DESTINATION ${exampleDestDir} RENAME CMakeLists.txt COMPONENT examples)
INSTALL (FILES audiodriver.cc audioex.cfg README DESTINATION ${exampleDestDir} COMPONENT examples)
